--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         </div>
         <script>
             
-			var area = true;
-			var points = 50;
 			
 			
 			///////////////////////////////////////////////////////////////////////////////////////
@@ -40,20 +38,23 @@
 			///////////////////////////////////////////////////////////////////////////////////////
 			
 			
-            
+			var area,points, minYdummyData,maxYdummyData;
 			
             function randomNumber(from, to){
                 return Math.floor(Math.random() * (to - from + 1) + from);
             }
 			
+			points = randomNumber(10, 300);
 			area = randomNumber(0, 1);
+			minYdummyData = randomNumber(-5000, 5000);
+			maxYdummyData =  minYdummyData + (randomNumber(-5000, 5000));
 			
             //make a data set
             var data = [];
             var dates = [];
 			var years = 1970;
             for (var i = 0; i < points; i++) {
-                data.push(randomNumber(-500, 543));
+                data.push(randomNumber(minYdummyData, maxYdummyData));
 				dates.push(randomNumber(1, 28) + "/" + randomNumber(1, 12) + "/" + years);
 				years += randomNumber(1, 3);
             }
@@ -135,7 +136,7 @@
 			
 			var yMultiplier = chartHeight / yScope;
 			
-			var xMultiplier = chartWidth / Number(data.length) + (0.00333 / 2)  ;
+			var xMultiplier = chartWidth / ( Number(data.length)   - 1) ;
 			
             for (var i = 0; i < data.length; i++) {
                 if(maxDataPoint < data[i]){
